# Paper-to-Code

./: LICENSE  main.py  pyproject.toml  requirements.txt
app/agents/: paper_reader.py  paper_summary.py
app/config/: llm.py
app/prompts/: paper_reader_prompt.txt  paper_summary_prompt.txt
app/schemas/: paper_reader_schema.py  paper_summary_schema.py
app/services/: text_cleaner.py
