[project]
name = "paper-to-code-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu<=1.10.0",
    "langchain>=1.3.13",
    "langchain-core>=1.4.9",
    "langchain-ollama>=1.1.0",
    "pydantic>=2.13.4",
    "pymupdf>=1.28.0",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "typer>=0.26.8",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]
